--- a/AVL_Trees.ipynb
+++ b/AVL_Trees.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKL/htbGEUyqyMijNteWXc",
+      "authorship_tag": "ABX9TyNOPoh5GTFKrg26jTNpfl9M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,6 +150,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### `TreeNode`,`get_height`, `get_balance`, `inorder_traversal`"
+      ],
+      "metadata": {
+        "id": "m2KF_DkuAq_-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class TreeNode:\n",
@@ -169,39 +178,117 @@
         "        return 0\n",
         "    return get_height(node.left) - get_height(node.right)\n",
         "\n",
-        "def right_rotate(y):\n",
-        "    print(f\"Right rotate on node {y.data}\")\n",
-        "    # assign left child of y to x\n",
-        "    x = y.left\n",
+        "def inorder_traversal(node):\n",
+        "    if node is not None:\n",
+        "        inorder_traversal(node.left)\n",
+        "        print(node.data, end=\", \")\n",
+        "        inorder_traversal(node.right)"
+      ],
+      "metadata": {
+        "id": "8acPSal4yESl"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `right/left rotate`"
+      ],
+      "metadata": {
+        "id": "Wcxsq9piCtR9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def right_rotate(x):\n",
+        "    print(f\"Right rotate on node {x.data}\")\n",
+        "    # assign left child of x to y\n",
+        "    y = x.left\n",
         "\n",
         "    # make rotation\n",
-        "    T2 = x.right\n",
-        "    x.right = y\n",
-        "    y.left = T2\n",
+        "    x.left = y.right\n",
+        "    y.right = x\n",
         "\n",
         "    # update heights\n",
         "    x.height = max(get_height(x.left), get_height(x.right)) + 1\n",
         "    y.height = max(get_height(y.left), get_height(y.right)) + 1\n",
         "\n",
         "    # return new root\n",
-        "    return x\n",
+        "    return y\n",
         "\n",
-        "def left_rotate(y):\n",
+        "def left_rotate(x):\n",
         "    # analogously to right rotate\n",
-        "    print(f\"Left rotate on node {y.data}\")\n",
+        "    print(f\"Left rotate on node {x.data}\")\n",
         "\n",
-        "    x = y.right\n",
+        "    y = x.right\n",
         "\n",
-        "    T2 = x.left\n",
-        "    x.left = y\n",
-        "    y.right = T2\n",
+        "    x.right = y.left\n",
+        "    y.left = x\n",
         "\n",
         "    x.height = max(get_height(x.left), get_height(x.right)) + 1\n",
         "    y.height = max(get_height(y.left), get_height(y.right)) + 1\n",
         "\n",
-        "    return x\n",
+        "    return y"
+      ],
+      "metadata": {
+        "id": "2yYMCW2ABiUW"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `rebalance_tree`"
+      ],
+      "metadata": {
+        "id": "IxvxUyIcDMCh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rebalance_tree(node, balance):\n",
+        "    # Balancing the tree\n",
+        "    if abs(balance) <= 1:\n",
+        "        return node\n",
         "\n",
+        "    print(\"Tree is not balanced. Rebalancing.\")\n",
+        "\n",
+        "    # Left Case\n",
+        "    if balance > 1:\n",
+        "        if get_balance(node.left) < 0:\n",
+        "            node.left = left_rotate(node.left) # LR Case\n",
+        "        return right_rotate(node)\n",
+        "\n",
+        "    # Right Case\n",
+        "    if balance < -1:\n",
+        "        if get_balance(node.right) > 0: # RL case\n",
+        "            node.right = right_rotate(node.right)\n",
+        "        return left_rotate(node)"
+      ],
+      "metadata": {
+        "id": "sa8C4drZDygQ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `insert`"
+      ],
+      "metadata": {
+        "id": "rkL6lifiFu_z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def insert(node, data):\n",
+        "    # inserting node\n",
         "    if node is None:\n",
         "        return TreeNode(data)\n",
         "\n",
@@ -210,33 +297,30 @@
         "    else:\n",
         "        node.right = insert(node.right, data)\n",
         "\n",
-        "    # Update balance factor and balace the tree\n",
+        "    # updating height and rebalancing\n",
         "    node.height = 1 + max(get_height(node.left), get_height(node.right))\n",
         "    balance = get_balance(node)\n",
         "\n",
-        "    # Balancing the tree\n",
-        "    if abs(balance) > 1:\n",
-        "        print(\"Tree is not balanced. Rebalancing.\")\n",
-        "    # Left Left Case - Right Rotation\n",
-        "    if balance > 1 and get_balance(node.left) >= 0:\n",
-        "        return right_rotate(node)\n",
-        "\n",
-        "    # Right Right Case - Left Rotation\n",
-        "    if balance < -1 and get_balance(node.right) <= 0:\n",
-        "        return left_rotate(node)\n",
-        "\n",
-        "    # Left Right Case - Left Rotation -> Right Rotation\n",
-        "    if balance > 1 and get_balance(node.left) < 0:\n",
-        "        node.left = left_rotate(node.left)\n",
-        "        return right_rotate(node)\n",
-        "\n",
-        "    # Right Left Case - Right Rotation -> Left Rotation\n",
-        "    if balance < -1 and get_balance(node.right) > 0:\n",
-        "        node.right = right_rotate(node.right)\n",
-        "        return left_rotate(node)\n",
-        "\n",
-        "    return node\n",
-        "\n",
+        "    return rebalance_tree(node, balance)"
+      ],
+      "metadata": {
+        "id": "EzKT3IjgBrlS"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `delete`"
+      ],
+      "metadata": {
+        "id": "yOnVK6qAFzmw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def min_value_node(node):\n",
         "    current = node\n",
         "    while current.left is not None:\n",
@@ -244,6 +328,7 @@
         "    return current\n",
         "\n",
         "def delete(node, data):\n",
+        "    # deleting node\n",
         "    if not node:\n",
         "          return node\n",
         "\n",
@@ -265,38 +350,26 @@
         "        node.data = temp.data\n",
         "        node.right = delete(node.right, temp.data)\n",
         "\n",
-        "\n",
+        "    # updating height and rebalancing\n",
         "    node.height = 1 + max(get_height(node.left), get_height(node.right))\n",
         "    balance = get_balance(node)\n",
         "\n",
-        "    if abs(balance) > 1:\n",
-        "        print(\"Tree is not balanced. Rebalancing.\")\n",
-        "    if balance > 1 and get_balance(node.left) >= 0:\n",
-        "        return right_rotate(node)\n",
-        "\n",
-        "    if balance < -1 and get_balance(node.right) <= 0:\n",
-        "        return left_rotate(node)\n",
-        "\n",
-        "    if balance > 1 and get_balance(node.left) < 0:\n",
-        "        node.left = left_rotate(node.left)\n",
-        "        return right_rotate(node)\n",
-        "\n",
-        "    if balance < -1 and get_balance(node.right) > 0:\n",
-        "        node.right = right_rotate(node.right)\n",
-        "        return left_rotate(node)\n",
-        "\n",
-        "    return node\n",
-        "def inorder_traversal(node):\n",
-        "    if node is not None:\n",
-        "        inorder_traversal(node.left)\n",
-        "        print(node.data, end=\", \")\n",
-        "        inorder_traversal(node.right)"
+        "    return rebalance_tree(node, balance)"
       ],
       "metadata": {
-        "id": "8acPSal4yESl"
+        "id": "wQPm0II8B7kV"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Testing"
+      ],
+      "metadata": {
+        "id": "ezfKta4kH-vd"
+      }
     },
     {
       "cell_type": "code",
@@ -324,7 +397,7 @@
       "metadata": {
         "id": "vREI89zFjheK"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -356,7 +429,7 @@
       "metadata": {
         "id": "5WNyqbG6mIoK"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -389,7 +462,7 @@
       "metadata": {
         "id": "6ejDpsKdnXvC"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -402,9 +475,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WRpIMnh5kRc_",
-        "outputId": "3fb50c58-6ff2-4c61-82d1-f66b295c0d02"
+        "outputId": "4d2e6543-0a66-4b3b-9e8c-c410d11e775c"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,10 +496,8 @@
             "Tree is not balanced. Rebalancing.\n",
             "Left rotate on node 30\n",
             "Tree is not balanced. Rebalancing.\n",
-            "Left rotate on node 20\n",
-            "Tree is not balanced. Rebalancing.\n",
-            "Left rotate on node 20\n",
             "Right rotate on node 40\n",
+            "Left rotate on node 20\n",
             "\n",
             "Avl tree structure\n",
             "Root: 30\n",
